Prevent overflow content

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   font-family: 'Inter', sans-serif;
+  overflow: hidden;
 }
 
 .item,
